Header info align fixed

--- a/src/content/landingComponent/_landing-page.scss
+++ b/src/content/landingComponent/_landing-page.scss
@@ -53,6 +53,9 @@
   #iframe-map-container-bigSM {
     display: none;
   }
+  #contact-info-header {
+    margin-bottom: 2%;
+  }
 }
 
 @media only screen and (max-width: 1026px) {
